# ai_reports

./: .dockerignore  .env.example  .gitignore  11.py  23.py  ABORT_ANALYSIS.md  ABORT_GRADING_TEST.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  REQUIREMENTS.md  SYSTEM_DOCUMENTATION.md  ai_grader.py  annotate_endpoint.txt  api.md  api.py  api_server.py  architecture.plantuml  architecture_mermaid.md  config.py  config_manager.py  create_test_doc.py  create_test_doc_files.py  criteria.json  database.py  docker-compose.monitoring.yml  docker-compose.secrets.yml  docker-compose.ssl.yml  docker-compose.yml  document_processor.py  file_manager.py  grade_single_student.py  grading_system.py  log_manager.py  main.py  migrate_add_last_login.py  migrate_add_user_templates.py  pdf_chinese_helper.py  pdf_grader.py  (+39 more)
api/: __init__.py  main.py  main.py.new
database/: init.sql
front/: admin.css  admin_dashboard.html  admin_dashboard.js  admin_logs.html  admin_logs.js  admin_users.html  admin_users.js  index.html  login.css  login.html  login.js  script.js  style.css
logs/: server.pid
monitoring/: alertmanager.yml  loki.yml  prometheus.yml  promtail.yml
nginx/: default.conf  nginx.conf  ssl.conf
output/: 2021级电子信息科学与技术（嵌入式）1班-219051091060-张鑫-实验报告.docx_result.json  2021级电子信息科学与技术（嵌入式）1班-219051091063-匡许淇-实验报告.docx_result.json  2022级电子信息科学与技术2班-229051091003-杨恩泽-实验报告.docx_result.json  2022级电子信息科学与技术2班-229051091006-乔浩铭-实验报告.docx_result.json  2022级电子信息科学与技术2班-229051091011-翟柄荃-实验报告.docx_result.json  2022级电子信息科学与技术2班-229051091013-周淑鑫-实验报告.docx_result.json  (+2 more)
(+33 files in other folders)
