[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-report-grading-system"
version = "1.0.0"
description = "AI驱动的实验报告自动批阅系统"
authors = [{name = "AI Report Team", email = "team@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "starlette==0.27.0",
    "PyPDF2==3.0.1",
    "pdfplumber==0.10.3",
    "reportlab==4.0.7",
    "python-docx==1.1.0",
    "pandas==2.1.3",
    "openpyxl==3.1.2",
    "requests==2.31.0",
    "httpx==0.25.2",
    "python-dotenv==1.0.0",
    "volcengine-python-sdk[ark]==1.0.98",
    "openai>=1.0.0",
    "structlog==23.2.0",
    "pydantic==2.5.0",
    "aiofiles==23.2.1",
    "cryptography>=41.0.0",
    "psutil==5.9.6",
    "matplotlib==3.8.2",
    "pillow==10.1.0",
    "typing-extensions==4.8.0",
    "psycopg2-binary>=2.9.11",
    "bcrypt>=5.0.0",
    "passlib>=1.7.4",
    "python-jose>=3.5.0",
    "PyJWT>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]

[tool.setuptools]
packages = []
